REP-592 fixes layout issue on search button

--- a/save/webpages/mir-layout/scss/project_styles/_header.scss
+++ b/save/webpages/mir-layout/scss/project_styles/_header.scss
@@ -85,6 +85,7 @@ header {
     border-bottom-left-radius: 4px;
   }
   .btn {
+    border-radius: 0;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
   }
